gameAnswers bug squashed. Will now move on to Pop Culture section. I might abandon that section to focus solely on CSS if I am unable to meet the deadline.

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ gameMode{
     height: 10vh;
     width: 80vh;
 }
-gameAnswers{
+.gameAnswers{
     display: block;
 }
 #gameAnswers1, #gameAnswers2,#gameAnswers3, #gameAnswers4, #gameAnswers5, #gameAnswers6,#gameAnswers7, #gameAnswers8, #gameAnswers9, #gameAnswers10{
